# QEEntity

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
src/qe/entity/: AbstractS11nContext.cpp  AbstractS11nContext.hpp  AbstractSerializedItem.cpp  AbstractSerializedItem.hpp  AbstractSerializer.cpp  AbstractSerializer.hpp  AssociativeContainerRegister.cpp  AssociativeContainerRegister.hpp  CMakeLists.txt  ERItem.cpp  ERItem.hpp  ERItemPrivate.cpp  ERItemPrivate.hpp  Entity.cpp  Entity.hpp  EntityConstraints.cpp  EntityConstraints.hpp  EntityDef.cpp  EntityDef.hpp  EntityDefPrivate.cpp  EntityDefPrivate.hpp  EntityPrivate.cpp  EntityPrivate.hpp  Global.hpp  Model.cpp  Model.hpp  ModelPrivate.cpp  ModelPrivate.hpp  ModelRepository.cpp  ModelRepository.hpp  OneToManyAdapter.cpp  OneToManyAdapter.hpp  Relation.cpp  Relation.hpp  RelationDef.cpp  RelationDef.hpp  SequenceContainerRegister.cpp  SequenceContainerRegister.hpp  Types.cpp  Types.hpp
src/qe/entity/serialization/: AbstractSerializedItem.cpp  AbstractSerializedItem.hpp  AbstractSerializer.cpp  AbstractSerializer.hpp  CMakeLists.txt
test/: CMakeLists.txt  QEEntityTest.cpp  QEEntityTest.hpp
test/entity/: book.cpp  book.hpp  chapter.cpp  chapter.hpp
test_package/: CMakeLists.txt  conanfile.py  main.cpp
